tests/generated/140_time.out
Fatal error: Call to undefined method DtlIter::time() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/140_time.php on line 4